--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "dev": "nodemon server/index.js",
-    "build": "webpack",
-    "heroku-postbuild": "ng build --prod"
+    "dev": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
